--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ThreeJS Project Template</title>
-    </head>
-    <body>
-        <canvas class="canvas"></canvas>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Three.js Model</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <canvas class="canvas" id="canvas"></canvas>
+    <div class="text-content">
+      <h1>Текст на странице</h1>
+      <p>Дополнительная информация здесь.</p>
+      <button id="color-button">Изменить цвет</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
