--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,19 @@
 </head>
 <body>
   <div class="container">
-    <canvas class="canvas" id="canvas"></canvas>
     <div class="text-content">
-      <h1>Текст на странице</h1>
+      <h1>Описание модели</h1>
       <p>Дополнительная информация здесь.</p>
-      <button id="color-button">Изменить цвет</button>
+      <input type="color" id="color-picker" value="#00ff00" class="button">
+    </div>
+    <div class="canvas-container">
+      <canvas class="canvas" id="canvas"></canvas>
     </div>
   </div>
 
   <script src="script.js"></script>
+  <h1>
+    Опиисание данного цвета и 3D модели
+  </h1>
 </body>
 </html>
